deployment/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pilots-dataspace
  labels:
    name: pilots-dataspace
