deployment/kubernetes/13-did-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: did-web-ingress
  namespace: pilots-dataspace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pilots-dataspace.westeurope.cloudapp.azure.com
    secretName: pilots-dataspace-tls
  rules:
  - host: pilots-dataspace.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /.well-known/did.json
        pathType: Prefix
        backend:
          service:
            name: did-server
            port:
              number: 9876
